fixed the sidebar on tablet view, added sticky nav blog post

--- a/assets/sass/_blog.scss
+++ b/assets/sass/_blog.scss
@@ -1,6 +1,7 @@
 // Blog styles
 
 .page-title {
+  @extend .section-title;
   width: 80%;
   margin: ($line-height-computed * 2) auto $line-height-computed auto;
 }
